[gd_scene load_steps=19 format=3 uid="uid://cavkiimaw4l4w"]

[ext_resource type="Script" path="res://Scenes/Worlds/MainMenu/Scripts/MainMenu.gd" id="1_w761w"]
[ext_resource type="Shader" uid="uid://nt5qoe5snast" path="res://Scenes/Worlds/MainMenu/Shader/MainMenuBackground.tres" id="2_8k7pa"]
[ext_resource type="Shader" uid="uid://temhylg2ghpn" path="res://Scenes/Worlds/MainMenu/Shader/MainMenuParticles.tres" id="3_fa547"]
[ext_resource type="Script" path="res://Scripts/UI/TabController.gd" id="4_eewjv"]
[ext_resource type="Script" path="res://Scripts/UI/TabTransitionButton.gd" id="5_y57mj"]
[ext_resource type="Script" path="res://Scenes/Worlds/MainMenu/Scripts/CharacterSelect.gd" id="6_ijl74"]
[ext_resource type="PackedScene" uid="uid://dbnbqax27wmwc" path="res://Scenes/Worlds/MainMenu/Scenes/character_preview.tscn" id="7_rk3bc"]
[ext_resource type="PackedScene" uid="uid://c1gk4v3ulvpue" path="res://Scenes/Worlds/StageOne.tscn" id="8_npjm8"]
[ext_resource type="Script" path="res://Scripts/UI/Settings/Settings.gd" id="9_1ijjy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bexrh"]
shader = ExtResource("2_8k7pa")

[sub_resource type="CanvasTexture" id="CanvasTexture_kikhu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_urrtj"]
shader = ExtResource("3_fa547")

[sub_resource type="Curve" id="Curve_itrqn"]
max_value = 0.1
_data = [Vector2(0, 0), 0.0, 0.286471, 0, 1, Vector2(0.349076, 0.1), 0.0, 0.0, 0, 0, Vector2(0.778234, 0.1), 0.0, 0.0, 0, 0, Vector2(1, 0.00105263), -0.446179, 0.0, 1, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_w3qfw"]
curve = SubResource("Curve_itrqn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tp3gc"]
lifetime_randomness = 0.35
emission_shape = 3
emission_box_extents = Vector3(1000, 1000, 1)
particle_flag_disable_z = true
gravity = Vector3(50, 50, 0)
initial_velocity_min = 31.37
initial_velocity_max = 129.15
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 1.0
damping_max = 1.0
angle_min = -20.0
angle_max = 20.0
scale_min = 0.3
scale_max = 2.0
scale_curve = SubResource("CurveTexture_w3qfw")

[sub_resource type="Gradient" id="Gradient_7t5iu"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_hb0jw"]
color_ramp = SubResource("Gradient_7t5iu")

[sub_resource type="Theme" id="Theme_1l5py"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w761w")

[node name="Background" type="TextureRect" parent="."]
show_behind_parent = true
material = SubResource("ShaderMaterial_bexrh")
custom_minimum_size = Vector2(3000, 3000)
layout_mode = 2
offset_left = 563.0
offset_top = -1429.0
offset_right = 3563.0
offset_bottom = 1571.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.548453
texture = SubResource("CanvasTexture_kikhu")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_urrtj")
position = Vector2(494, 369)
amount = 100
process_material = SubResource("ParticleProcessMaterial_tp3gc")
texture = SubResource("NoiseTexture2D_hb0jw")
lifetime = 4.0
preprocess = 2.0

[node name="TabController" type="Control" parent="." node_paths=PackedStringArray("current_panel")]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_eewjv")
current_panel = NodePath("Main")

[node name="Main" type="Control" parent="TabController"]
visible = false
layout_mode = 1
anchors_preset = 0

[node name="RichTextLabel" type="RichTextLabel" parent="TabController/Main"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 671.5
offset_right = 1212.5
offset_bottom = 292.0
grow_horizontal = 2
text = "








IndieCure"
fit_content = true

[node name="VFlowContainer" type="VFlowContainer" parent="TabController/Main"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1118.0
offset_top = 401.0
offset_right = 1884.0
offset_bottom = 1038.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_1l5py")

[node name="Start" type="Button" parent="TabController/Main/VFlowContainer" node_paths=PackedStringArray("tabController", "target")]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
text = "Start Game"
script = ExtResource("5_y57mj")
tabController = NodePath("../../..")
target = NodePath("../../../CharacterSelect")

[node name="Settings" type="Button" parent="TabController/Main/VFlowContainer" node_paths=PackedStringArray("tabController", "target")]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
text = "Settings"
script = ExtResource("5_y57mj")
tabController = NodePath("../../..")
target = NodePath("../../../Settings")

[node name="Exit" type="Button" parent="TabController/Main/VFlowContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
text = "Exit"

[node name="CharacterSelect" type="Control" parent="TabController" node_paths=PackedStringArray("character_previews_container")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_ijl74")
character_preview = ExtResource("7_rk3bc")
character_previews_container = NodePath("CenterContainer/ColorRect/ColorRect/GridContainer")
temp_level = ExtResource("8_npjm8")

[node name="CenterContainer" type="CenterContainer" parent="TabController/CharacterSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="TabController/CharacterSelect/CenterContainer"]
custom_minimum_size = Vector2(1700, 950)
layout_mode = 2
color = Color(0.843137, 0.603922, 0.643137, 1)

[node name="VFlowContainer" type="VFlowContainer" parent="TabController/CharacterSelect/CenterContainer/ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -505.0
offset_top = -315.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_1l5py")

[node name="Start" type="Button" parent="TabController/CharacterSelect/CenterContainer/ColorRect/VFlowContainer"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
text = "Start
"

[node name="VSplitContainer" type="VSplitContainer" parent="TabController/CharacterSelect/CenterContainer/ColorRect/VFlowContainer"]
custom_minimum_size = Vector2(0, 91.25)
layout_mode = 2
split_offset = 4440

[node name="back" type="Button" parent="TabController/CharacterSelect/CenterContainer/ColorRect/VFlowContainer" node_paths=PackedStringArray("tabController", "target")]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
text = "Back"
script = ExtResource("5_y57mj")
tabController = NodePath("../../../../..")
target = NodePath("../../../../../Main")

[node name="ColorRect" type="ColorRect" parent="TabController/CharacterSelect/CenterContainer/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 60.0
offset_right = -60.0
offset_bottom = -350.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.796078, 0.533333, 0.576471, 1)

[node name="GridContainer" type="GridContainer" parent="TabController/CharacterSelect/CenterContainer/ColorRect/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 10

[node name="Group" type="ColorRect" parent="TabController/CharacterSelect/CenterContainer/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 635.0
offset_right = -520.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Stage Select" type="ColorRect" parent="TabController/CharacterSelect/CenterContainer/ColorRect/Group"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.584
anchor_right = 0.913
anchor_bottom = 1.0
offset_left = -2.08008
offset_right = 2.43994
grow_horizontal = 2
grow_vertical = 2
color = Color(0.286275, 0.541176, 0.752941, 1)

[node name="Character Info" type="ColorRect" parent="TabController/CharacterSelect/CenterContainer/ColorRect/Group"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.407
anchor_bottom = 1.0
offset_right = 70.16
grow_horizontal = 2
grow_vertical = 2
color = Color(0.670588, 0.34902, 0.839216, 1)

[node name="Settings" type="Control" parent="TabController"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_1ijjy")

[node name="SettingsLabel" type="RichTextLabel" parent="TabController/Settings"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 200.0
offset_right = 100.0
offset_bottom = 300.0
grow_horizontal = 2
text = "				 Settings"
fit_content = true

[node name="SettingsContainer" type="VBoxContainer" parent="TabController/Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -25.0
offset_right = 200.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="WindowModeContainer" type="HBoxContainer" parent="TabController/Settings/SettingsContainer"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
alignment = 1

[node name="WindowModeLabel" type="RichTextLabel" parent="TabController/Settings/SettingsContainer/WindowModeContainer"]
clip_contents = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Window mode
"
fit_content = true

[node name="WindowModeSelection" type="OptionButton" parent="TabController/Settings/SettingsContainer/WindowModeContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
item_count = 4
selected = 0
fit_to_longest_item = false
popup/item_0/text = "MODE_WINDOWED"
popup/item_0/id = 0
popup/item_1/text = "MODE_MAXIMIZED"
popup/item_1/id = 1
popup/item_2/text = "MODE_FULLSCREEN"
popup/item_2/id = 2
popup/item_3/text = "MODE_EXCLUSIVE_FULLSCREEN "
popup/item_3/id = 3

[node name="ResolutionContainer" type="HBoxContainer" parent="TabController/Settings/SettingsContainer"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
alignment = 1

[node name="ResolutionLabel" type="RichTextLabel" parent="TabController/Settings/SettingsContainer/ResolutionContainer"]
clip_contents = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Resolution"
fit_content = true

[node name="ResolutionSelection" type="OptionButton" parent="TabController/Settings/SettingsContainer/ResolutionContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
item_count = 6
selected = 3
fit_to_longest_item = false
popup/item_0/text = "1280x720"
popup/item_0/id = 0
popup/item_1/text = "1366x768"
popup/item_1/id = 1
popup/item_2/text = "1600x900"
popup/item_2/id = 2
popup/item_3/text = "1920x1080"
popup/item_3/id = 3
popup/item_4/text = "2560x1440"
popup/item_4/id = 4
popup/item_5/text = "3840x2160"
popup/item_5/id = 5

[node name="Back" type="Button" parent="TabController/Settings" node_paths=PackedStringArray("tabController", "target")]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.0
offset_top = -201.0
offset_right = 123.0
offset_bottom = -151.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"
script = ExtResource("5_y57mj")
tabController = NodePath("../..")
target = NodePath("../../Main")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(100, 30)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 1047.0
offset_right = 105.0
offset_bottom = 1077.0
grow_horizontal = 2
grow_vertical = 0
text = "WIP Build"

[connection signal="pressed" from="TabController/Main/VFlowContainer/Start" to="TabController/Main/VFlowContainer/Start" method="_on_pressed"]
[connection signal="pressed" from="TabController/Main/VFlowContainer/Settings" to="TabController/Main/VFlowContainer/Settings" method="_on_pressed"]
[connection signal="pressed" from="TabController/Main/VFlowContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="TabController/CharacterSelect/CenterContainer/ColorRect/VFlowContainer/Start" to="TabController/CharacterSelect" method="_on_start_pressed"]
[connection signal="pressed" from="TabController/CharacterSelect/CenterContainer/ColorRect/VFlowContainer/back" to="TabController/CharacterSelect/CenterContainer/ColorRect/VFlowContainer/back" method="_on_pressed"]
[connection signal="item_selected" from="TabController/Settings/SettingsContainer/WindowModeContainer/WindowModeSelection" to="TabController/Settings" method="_on_window_mode_selection_item_selected"]
[connection signal="item_selected" from="TabController/Settings/SettingsContainer/ResolutionContainer/ResolutionSelection" to="TabController/Settings" method="_on_resolution_item_selected"]
[connection signal="pressed" from="TabController/Settings/Back" to="TabController/Settings/Back" method="_on_pressed"]
